Compiler/tests/bad/Variables/12_variable.rs
struct Point2D{
    x:i32,
    y:i32
}

fn main(){
    let x : &Point2D = Point2D{x:6, y:-9};
}
